force-app/main/default/objects/camAccCon__c/camAccCon__c.object-meta.xml
<CustomObject>
    <label>キャンペーン取引先連結</label>
    <nameField>
        <displayFormat>Hub-{0000}</displayFormat>
        <label>キャンペーン取引先</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>