force-app/main/default/objects/camAccCon__c/fields/acc_name__c.field-meta.xml
<CustomField>
    <fullName>acc_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>キャンペーン</relationshipLabel>
    <relationshipName>campaignSS</relationshipName>
    <type>Lookup</type>
</CustomField>