force-app/main/default/objects/camAccCon__c/fields/cam_name__c.field-meta.xml
<CustomField>
    <fullName>cam_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>キャンペーン</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>寄贈元【企業】</relationshipLabel>
    <relationshipName>campaignSSs</relationshipName>
    <type>Lookup</type>
</CustomField>