force-app/main/default/objects/camAccCon__c/fields/con_name__c.field-meta.xml
<CustomField>
    <fullName>con_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>キャンペーン</relationshipLabel>
    <relationshipName>campaignSSss</relationshipName>
    <type>Lookup</type>
</CustomField>